project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Account/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Info</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>