project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Account/fields/Current_Course__c.field-meta.xml
<CustomField>
    <fullName>Current_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>