project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Account/fields/Learner_Since__c.field-meta.xml
<CustomField>
    <fullName>Learner_Since__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learner Since</label>
    <type>Date</type>
</CustomField>