project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Account/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Tutor</label>
    <referenceTo>Tutor__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>