project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Account/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <description>For learners/non-learners who have bought other products.</description>
    <label>Customer</label>
</RecordType>