project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Account/recordTypes/Learner.recordType-meta.xml
<RecordType>
    <fullName>Learner</fullName>
    <active>true</active>
    <description>For learners who have not bought other products.</description>
    <label>Learner</label>
</RecordType>